# particular

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  criterion.toml
.github/scripts/: deploy_benchmarks.sh  deploy_example.sh  deploy_showcase.sh
.github/workflows/: ci.yml  deploy.yml  rust.yml
benches/: benchmark.rs
examples/: README.md  deploy_example.sh
examples/bevy/: Cargo.toml  README.md
examples/bevy/src/: camera.rs  main.rs  nbody.rs  orbit_prediction.rs  physics.rs  selection.rs  ui.rs
examples/particle-toy/: Cargo.toml
examples/particle-toy/src/: main.rs  nbody.rs  physics.rs
examples/physics-scenes/: Cargo.toml
examples/physics-scenes/src/: main.rs  nbody.rs  rapier_schedule.rs  simulation_scenes.rs  trails.rs
examples/physics-scenes/src/simulation_scene/: loaded_scene.rs  mod.rs  scene_data.rs  spawnable.rs  systems.rs
examples/pocket-solar-system/: Cargo.toml  README.md
examples/pocket-solar-system/src/: camera.rs  main.rs  nbody.rs  orbit_prediction.rs  physics.rs  selection.rs  time.rs  ui.rs
examples/ring-formation/: Cargo.toml
examples/ring-formation/src/: camera.rs  main.rs  nbody.rs  rapier_schedule.rs  selection.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
particular/: CHANGELOG.md  Cargo.toml  README.md  criterion.toml
particular/benches/: benchmark.rs  compile_benchmarks_wasm.sh  run_benchmarks_native.sh
particular/benches/results/: native-x86-f32-3d.json  wasm-arm-f32-3d.json  wasm-x86-f32-3d.json
particular/src/: compute_method.rs  iterator.rs  lib.rs  parallel.rs  particle.rs  sequential.rs  storage.rs
particular/src/algorithms/: gpu.rs  mod.rs  parallel.rs  point_mass.rs  sequential.rs  storage.rs  vector.rs
particular/src/algorithms/gpu_data/: compute.wgsl  mod.rs
particular/src/algorithms/tree/: barnes_hut.rs  bbox.rs  mod.rs
particular/src/algorithms/wgpu_data/: mod.rs
particular/src/compute_method/: gpu.rs  math.rs  mod.rs  parallel.rs  point_mass.rs  sequential.rs  storage.rs
particular/src/compute_method/gpu_compute/: compute.wgsl  compute_shared.wgsl  compute_tiles.wgsl  mod.rs  particle.wgsl
particular/src/compute_method/tree/: mod.rs  partition.rs
particular/src/gpu/: bruteforce.wgsl  bruteforce_shared.wgsl  mod.rs  resources.rs
particular/src/gravity/: mod.rs
particular/src/gravity/impls/: glam.rs  mod.rs  nalgebra.rs  ultraviolet.rs
particular/src/gravity/newtonian/: acceleration.rs  acceleration_softened.rs  mod.rs
particular/src/tree/: mod.rs  partition.rs
particular_derive/: Cargo.toml
particular_derive/src/: gravity.rs  lib.rs
src/: compute.wgsl  compute_method.rs  gpu.rs  iterator.rs  iterators.rs  lib.rs  particle.rs  particle_set.rs  vector.rs
src/algorithms/: gpu.rs  mod.rs  parallel.rs  sequential.rs  storage.rs  vector.rs
src/algorithms/tree/: barnes_hut.rs  bbox.rs  mod.rs
src/algorithms/wgpu_data/: compute.wgsl  mod.rs
src/compute_method/: gpu.rs  mod.rs  parallel.rs  sequential.rs
src/compute_method/gpu/: compute.wgsl  mod.rs
src/compute_method/tree/: acceleration.rs  barnes_hut.rs  bbox.rs  mod.rs  orthtree.rs
src/compute_method/wgpu/: compute.wgsl  mod.rs
web/: config.toml
web/content/benchmarks/: _index.md  native.md  wasm.md
web/content/demos/: _index.md
web/content/demos/pocket-solar-system/: example.js
web/templates/: base.html  benchmarks.html  demos.html
website/: config.toml
website/content/benchmarks/: _index.md
website/content/benchmarks/native/: benchmark.json  index.md
website/content/benchmarks/webassembly/: benchmark.json  index.md
website/content/demos/: _index.md
website/content/demos/pocket-solar-system/: index.md
website/static/: CNAME  echarts.js  utils.js
website/templates/: 404.html  base.html  benchmarks.html  demos.html  example.html  index.html
