[package]
name = "particular"
version = "0.7.0-dev"
edition = "2021"
authors = ["Canleskis"]
description = "N-body simulation library written in Rust featuring BarnesHut and GPU accelerated algorithms."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Canleskis/particular"
documentation = "https://docs.rs/particular"
keywords = ["n-body", "gravity"]
categories = ["simulation", "game-development"]
exclude = [
    "particular-showcase.gif",
    "particular-comparison.png",
    "particular-comparison.svg",
]

[features]
parallel = ["dep:rayon"]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]

[dependencies]
particular_derive = { version = "0.6.0", path = "../particular_derive" }

ultraviolet = { version = "0", features = ["f64"] }
wide = "0"
glam = "0"

rayon = { version = "1", optional = true }

wgpu = { version = "0.16", optional = true }
bytemuck = { version = "1", optional = true }
pollster = { version = "0", optional = true }

[dev-dependencies]
criterion = { version = "0", default-features = true }
rand = "0"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "benchmark"
harness = false
