[package]
name = "particular"
description = "N-body simulation library written in Rust featuring BarnesHut and GPU accelerated algorithms."
documentation = "https://docs.rs/particular"
exclude = [
    "benches",
    "particular-showcase.gif",
    "particular-comparison.png",
    "particular-comparison.svg",
]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
parallel = ["dep:rayon"]
gpu = ["dep:wgpu", "dep:flume", "dep:bytemuck", "dep:pollster"]

[dependencies]
particular_derive = { version = "0.7.0-dev", path = "../particular_derive" }

ultraviolet = { version = "0.9", features = ["f64", "bytemuck"] }
wide = "0.7"

rayon = { version = "1", optional = true }

wgpu = { version = "0.19", optional = true }
flume = { version = "0.11", optional = true }
bytemuck = { version = "1", optional = true }
pollster = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { git = "https://github.com/bheisler/criterion.rs.git", branch = "feature-wasi-proper", default-features = false }
rand = "0.8"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "benchmark"
harness = false
