[package]
name = "physics-scenes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_framepace = "0.9.1"
bevy_rapier2d = { version = "0.19.0" }
bevy-inspector-egui = "0.14.0"
rand = "0.8.5"
bevy_prototype_debug_lines = "0.9.0"
bevy_pancam = { version = "0.7.0", features = ["bevy_egui"] }
bevy_mouse_tracking_plugin = "0.5.0"
bevy_egui = "0.18.0"
particular = { path = "../../particular"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
particular = { path = "D:/Dev/rust/particular/particular", features = ["parallel"] }

[metadata]
demo = true
title = "Physics Scenes"
mobile = false