[package]
name = "physics-scenes"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bevy = "0.9.1"
bevy_framepace = "0.9.1"
bevy_rapier2d = { version = "0.19.0" }
bevy-inspector-egui = "0.14.0"
rand = "0.8.5"
bevy_prototype_debug_lines = "0.9.0"
bevy_pancam = { version = "0.7.0", features = ["bevy_egui"] }
bevy_mouse_tracking_plugin = "0.5.0"
bevy_egui = "0.18.0"
particular = { path = "../../particular" }

[package.metadata.particular.rs]
title = "Pocket Solar System"
mobile = false
