[package]
name = "physics-scenes"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bevy = "0.12.1"
bevy_rapier2d = { version = "0.23.0" }
rand = "0.8.5"
bevy_pancam = { version = "0.10.0", features = ["bevy_egui"] }
bevy_egui = "0.24.0"
particular = { path = "../../particular", features = ["glam", "parallel"] }

[package.metadata.particular.rs]
title = "Physics Scenes"
mobile = false
