[package]
name = "pocket-solar-system"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
particular = { path = "../../particular" }
bevy = "0.11.2"
bevy_egui = "0.21"
crossbeam-channel = "0"
humantime = "2"

[package.metadata.particular.rs]
title = "Pocket Solar System"
mobile = false
