[package]
name = "pocket-solar-system"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
particular = { path = "../../particular", features = ["glam"] }
bevy = "0.12.1"
bevy_egui = "0.24"
crossbeam-channel = "0"
humantime = "2"

[package.metadata.particular.rs]
title = "Pocket Solar System"
mobile = false
