[package]
name = "ring-formation"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
particular = { path = "../../particular", features = ["glam"] }
bevy = "0.12.1"
bevy_rapier3d = { version = "0.23", features = ["simd-stable"] }
bevy_egui = "0.24"
rand = "0"
humantime = "2"

[package.metadata.particular.rs]
title = "Ring Formation"
mobile = false
